# HypervelocityEngineering

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  hve.cmd  hve.sh  mdq.toml  pyproject.toml  requirement-definition.md
.github/: .mcp.json  copilot-instructions.md  io-contract-exceptions.yaml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: ai-agent-design.yml  ai-agent-dev.yml  app-architecture-design.yml  app-design.yml  app-detail-design.yml  app-dev-microservice.yml  app-documentation.yml  app-selection.yml  auto-app-design.yml  auto-app-dev-microservice.yml  auto-app-selection.yml  auto-batch-design.yml  auto-batch-dev.yml  auto-iot-design.yml  auto-software-design.yml  auto-software-dev-webapp.yml  batch-design.yml  batch-dev.yml  dataflow-design.yml  dataflow-dev.yml  iot-design.yml  knowledge-management.yml  original-docs-review.yml  qa-knowledge-management.yml  qa-original-docs-import.yml  qa-original-docs.yml  qa-requirement-classification.yml  self-improve.yml  setup-labels.yml  sourcecode-to-documentation.yml  web-app-design.yml  web-app-dev.yml
.github/agent-templates/: README.md  _template.md
.github/agents/: Arch-AIAgentDesign-Step1.agent.md  Arch-AIAgentDesign-Step2.agent.md  Arch-AIAgentDesign-Step3.agent.md  Arch-AIAgentDesign.agent.md  Arch-ARD-BusinessAnalysis-Targeted.agent.md  Arch-ARD-BusinessAnalysis-Untargeted.agent.md  Arch-ARD-KPIOKRDefinition.agent.md  Arch-ARD-UseCaseCatalog.agent.md  Arch-AgenticRetrieval-Detail.agent.md  Arch-ApplicationAnalytics.agent.md  Arch-ApplicationCandidateAnArchalyzer.agent.md  Arch-ArchitectureCandidateAnalyzer.agent.md  Arch-Batch-DataModel.agent.md  Arch-Batch-DataSourceAnalysis.agent.md  Arch-Batch-DomainAnalytics.agent.md  Arch-Batch-JobCatalog.agent.md  Arch-Batch-JobSpec.agent.md  Arch-Batch-MonitoringDesign.agent.md  Arch-Batch-ServiceCatalog.agent.md  Arch-Batch-TDD-TestSpec.agent.md  Arch-Batch-TestStrategy.agent.md  Arch-DataCatalog.agent.md  Arch-DataModeling.agent.md  Arch-Dataflow-AppCatalog.agent.md  Arch-Dataflow-AppSpec.agent.md  Arch-Dataflow-DataModel.agent.md  Arch-Dataflow-DataSourceAnalysis.agent.md  Arch-Dataflow-DomainAnalytics.agent.md  Arch-Dataflow-MonitoringDesign.agent.md  Arch-Dataflow-ServiceCatalog.agent.md  Arch-Dataflow-TDD-TestSpec.agent.md  Arch-Dataflow-TestStrategy.agent.md  Arch-ImprovementPlanner.agent.md  (+81 more)
.hve/: mdq.sqlite
docs/: architecturally-requirements-app-05.md
hve/: __init__.py  __main__.py  agent_loader.py  app_arch_filter.py  ard_recommendations.py  ard_target_business_resolver.py  artifact_validation.py  auth.py  catalog_parsers.py  config.py  console.py  dag_executor.py  dag_parity.py  dag_plan.py  dag_planner.py  dag_validation.py  error_severity.py  existing_artifact_snapshot.py  fanout_expander.py  fork_kpi_logger.py  github_api.py  keybind.py  knowledge_versions.py  mdq_enforcement.py  models_api.py  models_cache.py  orchestrator.py  orchestrator_context.py  permission_handler.py  prompt_loader.py  prompt_templates.py  prompts.py  pytest_out.txt  pytest_run.txt  pytest_t11.txt  pytest_t11b.txt  pytest_t11c.txt  pytest_t11d.txt  qa_merger.py  reconciler.py  (+19 more)
mdq/: cli.py  indexer.py  query_router.py  search.py  store.py  strategies.py  usage_stats.py
presentation/: app.js  deep-dive.html  engineering.html  execution-modes.html  index.html  styles.css
qa/: AAD-Step1-2-service-list-context-review.md  AAS-Issue-1383-qa-checklist.md  AAS-Step1-context-review.md  Arch-UI-Detail-Issue-AAD-Step7-1.md  Arch-UI-List-Issue-AAD-Step4.md
sample/: app-arch-list.md  app-list.md  architectural-requirements-app-05.md  business-requirement-document-master-list.md
template/: atdd-template.md  typical-queries.json
tools/: __init__.py  apply_translations.py  compare_startup_tokens.py  detect-heading-conflicts.py  diff_token_measurements.py  enrich_upstream_inputs.py  fetch_xterm_assets.py  fill_agent_skills.py  fix-heading-conflicts.py  gen_app04_test_specs.py  inventory_skills.py  io-contracts-README.md  measure_startup_tokens.py  normalize-agent-headings.py  normalize_producers.py  remove_work_outputs.py  split_io_contracts.py  wrap_tr.py
users-guide/: 01-Business-Requirement.md  02-App-Selection.md  02-app-architecture-design.md  03-App-Design-Microservice-Azure.md  04-App-Design-Batch.md  04-app-design-dataflow.md  05-App-Dev-Microservice-Azure.md  06-App-Dev-Batch-Azure.md  06-app-dev-dataflow-azure.md  07-ai-agent-simple.md  08-AIAgent.md  08-ai-agent.md  09-QA-Knowledge-Management.md  10-app-documentation.md  11-original-docs-import.md  ApplicationDesign-AIAgent-Simple.md  ApplicationDesign-AIAgent.md  ApplicationDesign-microservice-polyglotpersistence.md  ApplicationDesign.md  BusinessReqreuiment.md  Development-WebAppOnAzure.md  ProductManagement-Documentation.md  README.md  SDK-Guide.md  agentic-retrieval-guide.md  getting-started.md  hve-app-guide.md  hve-cli-getting-started.md  hve-cli-orchestrator-guide.md  hve-cloud-getting-started.md  hve-gui-getting-started.md  hve-gui-orchestrator-guide.md  hve-technical-architecture.md  km-app-documentation.md  km-guide.md  original-docs-review.md  overview.md  plugin-mcp-auth.md  pricing-guide.md  prompt-examples.md  (+7 more)
work/: business-requirement-document-status.md
(+1169 files in other folders)
