[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hve"
version = "0.1.0"
description = "HVE CLI Orchestrator package"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "github-copilot-sdk>=0.3.0",
  "PyYAML>=6.0",
]

[project.scripts]
hve = "hve.__main__:main"

[tool.setuptools.packages.find]
include = ["hve*"]
exclude = ["hve.tests*"]
